--- a/template/package.json
+++ b/template/package.json
@@ -31,6 +31,8 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "@types/gapi": "^0.0.41",
+    "@types/gapi.auth2": "^0.0.55",
     "@types/i18n-js": "^3.8.2",
     "babel-plugin-react-native-web": "^0.17.5",
     "firebase": "^9.5.0",
